--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -237,14 +237,14 @@ jobs:
           export cache_repo_id='latest'
           if [ -e ~/ib-$DEVICE.tar.xz ]; then
             echo '上传imagebuilder'
-            echo `ls ~/ib-$DEVICE.tar.xz`
-            for i in {1..3}; do
+            while true; do
             ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
             echo $ret | jq -r '.assets[] | select(.name == "ib-'$DEVICE'.tar.xz").id' | \
             xargs -n1 -i curl -X DELETE -H "$AUTH" "https://api.$cache_path/assets/{}"
             #上传
             ls ~/ib-$DEVICE.tar.xz | parallel --wc 'while true; do curl -T {} -H "$AUTH" -H "Content-Type: application/octet-stream" "https://uploads.$cache_path/$cache_repo_id/assets?name={}" && break || true; done'
-            rm -rf `ls ~/ib-$DEVICE.tar.xz`
+            done
+            rm -rf ~/ib-$DEVICE.tar.xz
           fi
 
       - name: Clean space for upload cache
@@ -287,7 +287,7 @@ jobs:
 
           zstdmt -c --long lede.img | split --numeric=1 -b 2000m - lede.$DEVICE.img.zst.
           echo '上传编译cache: lede.img'
-          for i in {1..3}; do
+          while true; do
           ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
           echo $ret | jq -r '.assets[] | select(.name | contains ("'$DEVICE'.img")).id' | \
           xargs -n1 -i curl -X DELETE -H "$AUTH" "https://api.$cache_path/assets/{}"
