--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -150,7 +150,7 @@ jobs:
 
           zstdmt -c --long lede.img | split --numeric=1 -b 2000m - lede.$DEVICE.img.zst.
           mkdir -p $GITHUB_WORKSPACE/release
-          mv `ls lede.$DEVICE.img.zst` $GITHUB_WORKSPACE/release
+          mv `ls lede.$DEVICE.img.zst.*` $GITHUB_WORKSPACE/release
           echo '上传编译cache: lede.img'
           ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
           echo $ret | jq -r '.assets[] | select(.name | contains ("'$DEVICE'.img")).id' | \
