--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -104,29 +104,31 @@ jobs:
           make defconfig && sed -i -E 's/# (CONFIG_.*_COMPRESS_UPX) is not set/\1=y/' .config && make defconfig
           cat .config
 
-
-      - name: Clean space for upload cache
-        continue-on-error: true
-        run: |
-          sync
-          nohup sh -c '
-          echo "Listing 100 largest packages"
-          sudo dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n | tail -n 100
-          df -h
-          echo "Removing large packages"
-          sudo apt-get remove -y '^ghc-8.*' || true
-          sudo apt-get remove -y '^dotnet-.*' || true
-          sudo apt-get remove -y '^llvm-.*' || true
-          sudo apt-get remove -y 'php.*' || true
-          sudo apt-get remove -y azure-cli google-cloud-sdk hhvm google-chrome-stable firefox powershell mono-devel || true
-          sudo apt-get autoremove -y || true
-          sudo apt-get clean || true
-          df -h
-          df -i
-          ' &
-
       - name: Save cache state
         run: |
+          ulimit -SHn 65000
+          cd ~/lede
+          while true; do make download -j && break || true; done
+          
+          echo -e "$(nproc) thread compile"
+          
+          createdAt=$(gh -R ${GITHUB_REPOSITORY}  run list --json databaseId,createdAt --jq ".[]|select(.databaseId==${{ github.run_id }})|.createdAt")
+          echo "createdAt=$createdAt" >> $GITHUB_ENV
+          set -x
+          mkdir -p env/
+          touch env/toolchain.hash
+          CURRENT_HASH=$(git log --pretty=tformat:"%H" -n1 tools toolchain) 
+          CACHE_HASH=$(cat env/toolchain.hash)
+          if [ -z "$CACHE_HASH" ] || [ "$CURRENT_HASH" != "$CACHE_HASH" ]; then
+            echo 'star compile tools'
+            time make tools/compile -j$[`nproc`+1] || make tools/compile -j1 V=s
+            # tools 编译的时候和 toolchain 貌似会一起编译
+            time make toolchain/compile -j$[`nproc`+1] || make toolchain/compile -j1 V=s
+            echo $CURRENT_HASH > env/toolchain.hash
+          fi 
+          make buildinfo
+          make diffconfig buildversion feedsversion
+          
           cd
           set -x
           sleep 1
@@ -151,13 +153,11 @@ jobs:
           zstdmt -c --long lede.img | split --numeric=1 -b 2000m - lede.$DEVICE.img.zst.
           mkdir -p $GITHUB_WORKSPACE/release
           mv `ls lede.$DEVICE.img.zst.*` $GITHUB_WORKSPACE/release
+          rm -f ~/lede.img
           echo '上传编译cache: lede.img'
           ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
           echo $ret | jq -r '.assets[] | select(.name | contains ("'$DEVICE'.img")).id' | \
           xargs -n1 -i curl -X DELETE -H "$AUTH" "https://api.$cache_path/assets/{}"
-          #上传
-          #ls *img.zst* | parallel --wc 'while true; do curl -T {} -H "$AUTH" -H "Content-Type: application/octet-stream" "https://uploads.$cache_path/$cache_repo_id/assets?name={}" && break || true; done'
-          #exit 1
 
       - name: Upload release asset
         uses: svenstaro/upload-release-action@v2
@@ -304,6 +304,7 @@ jobs:
           # 访问api.$cache_path拿到cache_repo_id
           # https://docs.github.com/cn/rest/releases/releases#list-releases
           export cache_repo_id='76202864'
+          mkdir -p $GITHUB_WORKSPACE/release
           if [ -e ~/ib-$DEVICE.tar.xz ]; then
             echo '上传imagebuilder'
             while true; do
@@ -313,7 +314,7 @@ jobs:
             #上传
             ls ~/ib-$DEVICE.tar.xz | parallel --wc 'while true; do curl -T {} -H "$AUTH" -H "Content-Type: application/octet-stream" "https://uploads.$cache_path/$cache_repo_id/assets?name={}" && break || true; done'
             done
-            rm -rf ~/ib-$DEVICE.tar.xz
+            rm -f ~/ib-$DEVICE.tar.xz
           fi
 
       - name: Clean space for upload cache
@@ -355,19 +356,15 @@ jobs:
           sync
 
           zstdmt -c --long lede.img | split --numeric=1 -b 2000m - lede.$DEVICE.img.zst.
+          mv `ls lede.$DEVICE.img.zst.*` $GITHUB_WORKSPACE/release
+          rm -f ~/lede.img
           echo '上传编译cache: lede.img'
-          while true; do
           ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
           echo $ret | jq -r '.assets[] | select(.name | contains ("'$DEVICE'.img")).id' | \
           xargs -n1 -i curl -X DELETE -H "$AUTH" "https://api.$cache_path/assets/{}"
           #上传
           ls *img.zst* | parallel --wc 'while true; do curl -T {} -H "$AUTH" -H "Content-Type: application/octet-stream" "https://uploads.$cache_path/$cache_repo_id/assets?name={}" && break || true; done'
-          set +e
-          #成功上传才退出循环
-          for i in {1..20}; do curl -sL --fail https://github.com/${{github.repository_owner}}/sshactions/releases/download/cache/lede.$DEVICE.img.zst.0$i || break; done | zstdmt -d -o /dev/null
-          if [ $? -eq 0 ]; then break; fi
-          done
-          set -e
+          rm -f *img.zst*
 
   generate_firmware:
     needs: build_packages
